Finisher: give up the CPU automatically

Give up the CPU to give other threads those are waiting the
locks, such as the mds_lock, a change to run. Because if the
in_process_queue will require the same lock frequently it will
always succeed, and other lock waiters maybe stuck for several
seconds or longer.

Fixes: https://tracker.ceph.com/issues/51722
Signed-off-by: Xiubo Li <xiubli@redhat.com>